--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
   
   body {
     position:absolute;
-    background-color:rgb(243, 178, 59);
+    background-color:orange;
     color: #222;
     font-size: 1rem;
     display: flex;
-    justify-content:center;
-    align-items:center;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     height: 100vh;
   }
@@ -24,7 +24,7 @@
   }
   
   .temperature-converter {
-    background-color:none;
+    background: #ecebeb;
     border-radius: 5px;
     position: relative;
     display: flex;
@@ -34,7 +34,6 @@
     min-width: 320px;
     width: 100%;
     height: auto;
-    font-style:italic;
   }
   
   .result {
@@ -66,10 +65,9 @@
     border: none;
     outline: none;
     border-bottom: 2px solid black;
-    padding: 5px;
+    padding: 10px;
     margin-bottom: 15px;
     align-items: center;
-    font-style: italic;
   }
   
   input:focus {
@@ -77,9 +75,9 @@
   }
   
   .degree-type {
-    align-items:left;
+    align-items: center;
     padding:20px 0;
-    text-align:left;
+    text-align: center;
   }
   
   .degree-field {
@@ -95,7 +93,7 @@
   }
   
   #convert-btn {
-    background: linear-gradient(to bottom, black, black);
+    background: linear-gradient(to bottom, black, gray);
     border: none;
     outline: none;
     border-radius: 5px;
@@ -110,7 +108,7 @@
   }
   
   #convert-btn:hover {
-    background: linear-gradient(to bottom,black black);
+    background: linear-gradient(to bottom,gray,gray);
   }
   .image{
     display:flex;
@@ -127,10 +125,10 @@
   }
   .container{
     position:absolute;
-    top:40%;
-    right:10%;
+    top:30%;
     height:350px;
     width:450px;
-    align-items:left;
+    align-items: center;
     text-align: center;
   }
+   
